<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_item_basicinfo_textview"
            android:text="@string/info_material_id" />

        <View style="@style/view_vertical_divider_style" />

        <EditText
            android:id="@+id/edt_material_id"
            style="@style/style_item_basicinfo_edittext"
            android:layout_width="match_parent"
            android:focusable="false"
            android:textColor="@color/primary_text" />
        <!--android:hint="每次提交请输入不同的数字"-->
    </LinearLayout>

    <View style="@style/view_divider_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_item_basicinfo_textview"
            android:text="@string/info_material_type" />

        <View style="@style/view_vertical_divider_style" />

        <EditText
            android:id="@+id/edt_material_type"
            style="@style/style_item_basicinfo_edittext"
            android:layout_width="match_parent"
            android:focusable="false"
            android:textColor="@color/primary_text" />
    </LinearLayout>

    <View style="@style/view_divider_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_item_basicinfo_textview"
            android:text="@string/info_plant_id" />

        <View style="@style/view_vertical_divider_style" />

        <EditText
            android:id="@+id/edt_plant_id"
            style="@style/style_item_basicinfo_edittext"
            android:layout_width="match_parent"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View style="@style/view_divider_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/style_item_basicinfo_textview"
            android:text="@string/info_mark" />

        <View style="@style/view_vertical_divider_style" />

        <EditText
            android:id="@+id/remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/view_divider_style" />

</LinearLayout>
